<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Assignment5.Acknowledgements"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:id="@+id/profile"
        android:background="#e7e4e4">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="#faeaea">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_acknowledgements"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_strategy"
            android:id="@+id/strategy"
            android:textColor="#000000"
            android:gravity="fill_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_acknowledgements"
            android:id="@+id/acknowledgements"
            android:textColor="#000000"
            android:gravity="fill_horizontal"
            android:scrollbars = "vertical" />




    </LinearLayout>

</RelativeLayout>
