<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Assignment5.TestDictionary"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:id="@+id/dictionary"
        android:background="#e7e4e4">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0sp"
            android:text="@string/label_dictionary"
            android:gravity="center"
            android:id="@+id/textView"
            android:textColor="#000000"
            android:textSize="32sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:gravity="center"
                android:text=""
                android:hint="Type Word"
                android:textAlignment="center"
                android:background="#fac4c4"
                android:textColor="#000000" />
        </LinearLayout>


        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="0sp"
            android:scrollbars="vertical">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_return_to_menu"
                android:onClick="returnToMenu"
                android:background="@color/abc_search_url_text_normal"
                android:layout_gravity="center_vertical"
                android:clickable="true" />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_clear"
                android:onClick="clearText"
                android:background="#f55e4e"
                android:layout_gravity="center_vertical"
                android:clickable="true" />
            <Button
                android:layout_weight="2.3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_acknowledgements"
                android:onClick="acknowledgements"
                android:background="#cdde49"
                android:layout_gravity="center_vertical"
                android:clickable="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
